Update 웹 UI 프레임워크 활용한 개발 1-1.md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1.md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1.md
@@ -36,6 +36,7 @@ cd ..            // 뒤로가기
 ```
 </br>
 
+- index.html 파일
 - SAP UI5 프레임워크의 핵심(JavaScript) 라이브러리를 불러오는 코드
 ```html
 <script
@@ -58,6 +59,7 @@ cd ..            // 뒤로가기
 - view.xml, controller.js : 확장자(확장자는 전부 소문자)
 </br>
 
+- Main.view.xml 파일
 - ns : namespace
 ```html
 <mvc:View controllerName="sap.ui5.yui5project01.controller.Main"
