Update 웹 UI 프레임워크 활용한 개발 1-1.md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1.md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1.md
@@ -44,7 +44,7 @@ cd ..            // 뒤로가기
         src="resources/sap-ui-core.js"
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-resource-roots='{
-            "sap.ui5.yui5project01": "./"    // NameSpace.project 이름, ./ : 현재위치
+            "sap.ui5.yui5project01": "./"      <!-- NameSpace.project 이름, ./ : 현재위치 -->
         }'
         data-sap-ui-on-init="module:sap/ui/core/ComponentSupport"
         data-sap-ui-compat-version="edge"
@@ -63,8 +63,8 @@ cd ..            // 뒤로가기
 - ns : namespace
 ```html
 <mvc:View controllerName="sap.ui5.yui5project01.controller.Main"
-    xmlns:mvc="sap.ui.core.mvc"  // :mvc => 별칭. 다른 namespace를 추가하고 싶을 때 사용.
-    xmlns="sap.m">
+    xmlns:mvc="sap.ui.core.mvc"   <!-- :mvc => 별칭. 다른 namespace를 추가하고 싶을 때 사용. -->
+    xmlns="sap.m">                <!-- 기본 namespace: sap.m 라이브러리 사용 -->
     <Page id="page" title="{i18n>title}">
     </Page>
 </mvc:View>
