Update 웹 UI 프레임워크 활용한 개발 1-1.md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1.md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1.md
@@ -29,9 +29,9 @@
 - 터미널 실행절차
 ```bash
 터미널
-cd 프로젝트명    // 경로 맞추기
-cd ..            // 뒤로가기
-프로젝트명> npm install    // 설치 완료되면 node_modules 폴더가 생김
+cd 프로젝트명              # 경로 맞추기
+cd ..                      # 뒤로가기
+프로젝트명> npm install    # 설치 완료되면 node_modules 폴더가 생김
 프로젝트명> npm run satrt
 ```
 </br>
