Update 웹 UI 프레임워크 활용한 개발 1-1.md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1.md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1.md
@@ -64,9 +64,18 @@ cd ..                      # 뒤로가기
 ```html
 <mvc:View controllerName="sap.ui5.yui5project01.controller.Main"
     xmlns:mvc="sap.ui.core.mvc"   <!-- :mvc => 별칭. 다른 namespace를 추가하고 싶을 때 사용. -->
-    xmlns="sap.m">                <!-- 기본 namespace: sap.m 라이브러리 사용 -->
+    xmlns="sap.m">                <!-- 기본 namespace(1개): sap.m 라이브러리 사용 -->
     <Page id="page" title="{i18n>title}">
     </Page>
 </mvc:View>
+
+<!-- 기본 namespace 바꾸고 싶을 때 -->
+<View controllerName="sap.ui5.yui5project01.controller.Main"
+    xmlns="sap.ui.core.mvc"  
+    xmlns:m="sap.m">               
+    <m:Page id="page" title="{i18n>title}">
+            <!-- 이런식으로 m:과 같이 태그에 붙여줘야함 -->
+    </m:Page>
+</View>
 ```
 
