Update 웹 UI 프레임워크 활용한 개발 1-1.md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1.md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1.md
@@ -38,6 +38,7 @@ cd ..                      # 뒤로가기
 
 - index.html 파일
 - SAP UI5 프레임워크의 핵심(JavaScript) 라이브러리를 불러오는 코드
+- data-sap-ui-resource-roots : 앱의 네임스페이스(sap.ui5.yui5project01)는 실제 파일 경로상에서는 현재 폴더(./)에 있
 ```html
 <script
         id="sap-ui-bootstrap"
