--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1.md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1.md
@@ -1,8 +1,13 @@
 # 10/23 기록
 # 웹 UI 프레임워크 활용한 개발 1-1
 - Fiori :  SAP 디자인 가이드라인
-- Fiori Launchpad : SAP program/UI5. 다양한 환경에서 업무처리가 가능한 대시보드.
-- UI5 : SAP가 권장하는 최적의 UI Application을 만들 수 있는 Javascript 프레임워크 (내부가 Js로 이루어져 있음)
+- Fiori Launchpad : SAP의 통합 대시보드 환경. 여러 개의 SAP UI5 앱을 한 화면에서 실행 가능.
+- UI5 : SAP가 권장하는 최적의 UI Application을 만들 수 있는 Javascript 프레임워크 (내부 구조는 JS + XML + JSON)
+</br>
+
+### UI5 종류
+- SAPUI5 : SAP 내부 시스템 전용 (SAP BTP 등에서 사용)
+- OpenUI5 : 오픈소스 버전 (무료로 사용 가능)
 
 * 참고 사이트 : UI5 SDK 사이트(UI5 API 사이트), SAP BTP Trial 사이트
 * https://<host>:<port>/sap/public/bc/ui5_ui5/index.html
