--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1.md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1.md
@@ -13,25 +13,27 @@
 - OpenUI5 : 오픈소스 버전 (무료로 사용 가능)
 </br>
 
-### Model, Controller, View 구조 (MVC 패턴)
+### MVC 패턴 구
 - UI5는 세 가지 구조로 나뉨. UI5는 다양한 브라우저에서 지원.
-- View : 화면 담당 (UI)
-- Controller : 기능 담당
-- Model : 데이터 담당. 데이터의 CRUD 처리. (JSON, oData)
+- View : 사용자 UI (XML, HTML, JS로 정의 가능)
+- Controller : View의 동작 제어 (이벤트 처리, 로직 구현)
+- Model : 데이터 관리 및 CRUD 처리 (JSON, oData)
 </br>
 
 ### SAP에서 주로 사용되는 라이브러리
+- sap.m
 - sap.ui.comp
 - sap.ui.table
 - sap.ui.layout
 - sap.ui.core
 </br>
-  
-- SAP Business Application Studio (BAS)
-- Visual Studio Code
+
+### SAP 개발 환경
+- SAP Business Application Studio (BAS) : 클라우드 기반 IDE (SAP 공식 개발 환경)
+- Visual Studio Code : 로컬 개발 시 많이 사용
 </br>
 
-- 터미널 실행절차
+### 터미널 실행절차
 ```bash
 터미널
 cd 프로젝트명              # 경로 맞추기
