Update 웹 UI 프레임워크 활용한 개발 1-1.md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1.md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1.md
@@ -36,16 +36,19 @@
 ### 터미널 실행절차
 ```bash
 터미널
+
 cd 프로젝트명              # 경로 맞추기
 cd ..                      # 뒤로가기
+
 프로젝트명> npm install    # 설치 완료되면 node_modules 폴더가 생김
-프로젝트명> npm run satrt
+프로젝트명> npm run satrt  # 서버 실
 ```
 </br>
 
-- index.html 파일
+### index.html 파일
 - SAP UI5 프레임워크의 핵심(JavaScript) 라이브러리를 불러오는 코드
-- data-sap-ui-resource-roots : 앱의 네임스페이스(sap.ui5.yui5project01)는 실제 파일 경로상에서는 현재 폴더(./)에 있
+- data-sap-ui-resource-roots : 앱의 네임스페이스(sap.ui5.yui5project01)는 실제 파일 경로상에서는 현재 폴더(./)에 있음
+- data-sap-ui-resource-roots 가 없으면, UI5가 Controller, View, Component.js 파일의 실제 경로를 찾지 못해 앱이 실행되지 않
 ```html
 <script
         id="sap-ui-bootstrap"
@@ -62,13 +65,18 @@ cd ..                      # 뒤로가기
 ```
 </br>
 
+### UI5 실행 순서
 - Component.js, index.html, manifest.json은 설정 파일 (프로젝트 구동 시 필요한 파일들. App 초기 설정을 담당.)
-- SAPUI5 실행 순서 : index.html -> Component.js -> manifest.json -> App.view.xml (rootview에 의해) -> App.controller.js (controllername에 의해)
+- SAPUI5 실행 순서 : index.html -> Component.js -> manifest.json -> App.view.xml (rootview에 의해) -> App.controller.js (controllername에 의해) -> Main.view.xml -> Main.controller.js
+- manifest.json 안의 "sap.ui5": { "rootView": { ... } } 부분이 앱의 첫 화면을 결정함. 이후 모든 View 전환은 Routing(routing.config)으로 관리.
 - view.xml, controller.js : 확장자(확장자는 전부 소문자)
 </br>
 
+### View & Controller (MVC 연결)
 - Main.view.xml 파일
 - ns : namespace
+- View 파일명은 반드시 대문자로 시작 (Main.view.xml)
+- Controller 파일명은 반드시 같은 이름의 .controller.js
 ```html
 <mvc:View controllerName="sap.ui5.yui5project01.controller.Main"
     xmlns:mvc="sap.ui.core.mvc"   <!-- :mvc => 별칭. 다른 namespace를 추가하고 싶을 때 사용. -->
