Update 웹 UI 프레임워크 활용한 개발 1-1.md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1.md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1.md
@@ -13,7 +13,7 @@
 - OpenUI5 : 오픈소스 버전 (무료로 사용 가능)
 </br>
 
-### MVC 패턴 구
+### MVC 패턴 구조
 - UI5는 세 가지 구조로 나뉨. UI5는 다양한 브라우저에서 지원.
 - View : 사용자 UI (XML, HTML, JS로 정의 가능)
 - Controller : View의 동작 제어 (이벤트 처리, 로직 구현)
