--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.23).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.23).md
@@ -48,7 +48,7 @@ cd ..                      # 뒤로가기
 ### index.html 파일
 - SAP UI5 프레임워크의 핵심(JavaScript) 라이브러리를 불러오는 코드
 - data-sap-ui-resource-roots : 앱의 네임스페이스(sap.ui5.yui5project01)는 실제 파일 경로상에서는 현재 폴더(./)에 있음
-- data-sap-ui-resource-roots 가 없으면, UI5가 Controller, View, Component.js 파일의 실제 경로를 찾지 못해 앱이 실행되지 않
+- data-sap-ui-resource-roots 가 없으면, UI5가 Controller, View, Component.js 파일의 실제 경로를 찾지 못해 앱이 실행되지 않음
 ```html
 <script
         id="sap-ui-bootstrap"
