--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
@@ -6,3 +6,39 @@ git branch      // * main
 ```
 - 현재 로컬 저장소의 브랜치를 확인
 - 현재 작업 중인 브랜치 앞에 * 표시
+
+```bash
+git branch -a
+```
+- 로컬 브랜치뿐 아니라 원격(origin) 브랜치도 확인 가능
+- 원격 브랜치 앞에는 remotes/origin/브랜치명으로 표시됨
+- 종료 : Q
+</br>
+
+```bash
+git checkout <브랜치명>
+```
+- 브랜치 전환. 해당 브랜치로 워킹 디렉터리가 변경되고, 그 브랜치의 코드로 작업할 수 있게 됨.
+</br>
+
+```bash
+npm install
+```
+- 패키지 설치
+</br>
+
+```bash
+git add .
+```
+- 현재 폴더와 하위 파일을 모두 스테이지에 올림
+
+```bash
+git commit -m "커밋 메시지"
+```
+- 변경 사항을 로컬 저장소에 기록
+
+```bash
+git log
+```
+- 커밋 히스토리 확인
+- 종료 : Q
