Update 웹 UI 프레임워크 활용한 개발 1-1(10.24).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
@@ -39,3 +39,16 @@ git log
 ```
 - 커밋 히스토리 확인
 - 종료 : Q
+</br>
+
+### Aggregation
+- UI5에서 부모 컨트롤이 자식 컨트롤을 포함하는 관계
+```html
+<App>
+  <pages>          <!-- Aggregation 이름 → 소문자 시작 -->
+    <Pages>
+      ...
+    </Pages>
+  </pages>
+</App>
+```
