Update 웹 UI 프레임워크 활용한 개발 1-1(10.24).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
@@ -52,3 +52,19 @@ git log
   </pages>
 </App>
 ```
+</br>
+
+### Method
+- 객체가 할 수 있는 행동
+
+```java
+Input 객체 => getValue();
+```
+- Input 객체는 사용자가 입력한 값을 저장/관리
+- getValue() → 입력된 값을 읽어오는 메서드
+
+```java
+Button.setText("안녕")
+```
+- Button 객체는 UI 상의 버튼
+- setText() → 버튼의 글자를 바꾸는 메서드
