Update 웹 UI 프레임워크 활용한 개발 1-1(10.24).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
@@ -68,3 +68,22 @@ Button.setText("안녕")
 ```
 - Button 객체는 UI 상의 버튼
 - setText() → 버튼의 글자를 바꾸는 메서드
+</br>
+
+```html
+<mvc:View controllerName="ycl2project01.controller.View1"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:l="sap.ui.layout"
+    xmlns:core="sap.ui.core"
+    xmlns="sap.m">                                <!-- 태그 사이에 주석을 달면 오류 -->
+    <Page id="page" title="{i18n>title}">
+        <content>                                 <!-- content는 sap.m.page의 Aggregation -->
+            <l:VerticalLayout>                    <!-- 자식 컨트롤들을 수직으로 배치 -->
+                <!-- 이런 객체 하나하나를 "Control" 이라고 부름 -->
+                <Input id="idInput1" value="Hello world"/>
+                <Button id="idButtont" text="OK" press="onPress"/>
+            </l:VerticalLayout>
+        </content>
+    </Page>
+</mvc:View>
+```
