Update 웹 UI 프레임워크 활용한 개발 1-1(10.24).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
@@ -70,6 +70,7 @@ Button.setText("안녕")
 - setText() → 버튼의 글자를 바꾸는 메서드
 </br>
 
+- View1.view.xml 파일
 ```html
 <mvc:View controllerName="ycl2project01.controller.View1"
     xmlns:mvc="sap.ui.core.mvc"
