Update 웹 UI 프레임워크 활용한 개발 1-1(10.24).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
@@ -64,6 +64,11 @@ Input 객체 => getValue();
 - getValue() → 입력된 값을 읽어오는 메서드
 
 ```java
+this.getView()
+```
+- Controller가 현재 관리하는 View 가져오기
+
+```java
 Button.setText("안녕")
 ```
 - Button 객체는 UI 상의 버튼
@@ -87,4 +92,33 @@ Button.setText("안녕")
         </content>
     </Page>
 </mvc:View>
+```
+
+```html
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/m/Button"
+], 
+// 위 배열에서 가져온 js파일들을 순서대로 파라미터에 넣어줌
+(Controller, Button) => {    
+    // 파라미터 변수들을 아래 로직에서 사용할 수 있음
+    // 파라미터 순서 맞추기
+    "use strict";   // 엄격모드 Javascript
+
+    return Controller.extend("ycl2project01.controller.View1", {
+        count : 10,
+        onInit: function() {
+        },
+        onPress: function() {
+            // this는 controller를 가리킴
+            // .getView()는 Controller와 연결된 view를 가져옴
+            // .byId(<아이디>)는 해당 아이디에 맞는 Control을 가져옴
+            let oButton = this.getView().byId("idButton");
+
+            // sap.m.Button의 Method인 .setText()를 활용하여
+            // 버튼 클릭시 버튼의 Text 속성을 변경
+            oButton.setText("Yes");
+        }
+    });
+});
 ```
