Update 웹 UI 프레임워크 활용한 개발 1-1(10.24).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
@@ -75,26 +75,9 @@ Button.setText("안녕")
 - setText() → 버튼의 글자를 바꾸는 메서드
 </br>
 
-- View1.view.xml 파일
-```html
-<mvc:View controllerName="ycl2project01.controller.View1"
-    xmlns:mvc="sap.ui.core.mvc"
-    xmlns:l="sap.ui.layout"
-    xmlns:core="sap.ui.core"
-    xmlns="sap.m">                                <!-- 태그 사이에 주석을 달면 오류 -->
-    <Page id="page" title="{i18n>title}">
-        <content>                                 <!-- content는 sap.m.page의 Aggregation -->
-            <l:VerticalLayout>                    <!-- 자식 컨트롤들을 수직으로 배치 -->
-                <!-- 이런 객체 하나하나를 "Control" 이라고 부름 -->
-                <Input id="idInput1" value="Hello world"/>
-                <Button id="idButtont" text="OK" press="onPress"/>
-            </l:VerticalLayout>
-        </content>
-    </Page>
-</mvc:View>
-```
-
-```html
+### 1. Controller 코드
+- View1.controller.js 파
+```java
 sap.ui.define([
     "sap/ui/core/mvc/Controller",
     "sap/m/Button"
@@ -118,7 +101,41 @@ sap.ui.define([
             // sap.m.Button의 Method인 .setText()를 활용하여
             // 버튼 클릭시 버튼의 Text 속성을 변경
             oButton.setText("Yes");
+        },
+        onClick: function() {
+            // 버튼 클릭(press) 시 동작하는 이벤트 함수
+            // 구현 내용
+            // Input에 사용자가 입력한 값을 얻어, Text에 적용하고자 함
+            //  1. sap.m.Input에 담긴 값을 가져온다.
+            //  2. sap.m.Text에 해당 값을 적용한다.
+            //  3. 가져온 값을 sap.m.Text 객체의 
+            let oInput = this.getView().byId("idInput1");
+            let sValue = oInput.getValue();
+            let oText = this.getView().byId("idText");
+            oText.setText(sValue);
         }
     });
 });
+```
+</br>
+
+### 2. View 코드
+- View1.view.xml 파일
+```java
+<mvc:View controllerName="ycl2project01.controller.View1"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:l="sap.ui.layout"
+    xmlns:core="sap.ui.core"
+    xmlns="sap.m">  <!-- 태그 사이에 주석을 달면 오류 -->
+    <Page id="page" title="{i18n>title}">
+        <content> <!-- content는 sap.m.page의 Aggregation -->
+            <l:VerticalLayout>
+                <!-- 이런 객체 하나하나를 "Control" 이라고 부름 -->
+                <Input id="idInput1" value="Hello world" />
+                <Button id="idButton" text="OK" press="onClick" />
+                <Text id="idText" text="안녕하세요" />
+            </l:VerticalLayout>
+        </content>
+    </Page>
+</mvc:View>
 ```
