Update 웹 UI 프레임워크 활용한 개발 1-1(10.24).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
@@ -76,7 +76,7 @@ Button.setText("안녕")
 </br>
 
 ### 1. Controller 코드
-- View1.controller.js 파
+- View1.controller.js 파일
 ```java
 sap.ui.define([
     "sap/ui/core/mvc/Controller",
