Update 웹 UI 프레임워크 활용한 개발 1-1(10.24).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
@@ -57,14 +57,15 @@ git log
 ### Method
 - 객체가 할 수 있는 행동
 
+1) getValue()
 ```java
-Input 객체 => getValue();
+let value = oInput.getValue();
 ```
-- Input 객체는 사용자가 입력한 값을 저장/관리
-- getValue() → 입력된 값을 읽어오는 메서드
+- 소속 클래스: `sap.m.Input`
+- 입력창에 사용자가 입력한 값을 읽어옴
 
 ```java
-this.getView()
+setValue(value)
 ```
 - Controller가 현재 관리하는 View 가져오기
 
