Update 웹 UI 프레임워크 활용한 개발 1-1(10.24).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
@@ -64,10 +64,12 @@ let value = oInput.getValue();
 - 소속 클래스: `sap.m.Input`
 - 입력창에 사용자가 입력한 값을 읽어옴
 
+2) setValue(value)
 ```java
-setValue(value)
+oInput.setValue("SAPUI5");
 ```
-- Controller가 현재 관리하는 View 가져오기
+- 소속 클래스: `sap.m.Input`
+- Input에 표시될 값을 설정함
 
 ```java
 Button.setText("안녕")
