Update 웹 UI 프레임워크 활용한 개발 1-1(10.24).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
@@ -62,7 +62,7 @@ git log
 let value = oInput.getValue();
 ```
 - 소속 클래스: `sap.m.Input`
-- 입력창에 사용자가 입력한 값을 읽어옴
+- 사용자가 입력한 값을 읽음
 </br>
 
 2) setValue(value)
@@ -71,12 +71,38 @@ oInput.setValue("SAPUI5");
 ```
 - 소속 클래스: `sap.m.Input`
 - Input에 표시될 값을 설정함
+</br>
 
+3) getText()
 ```java
-Button.setText("안녕")
+let sText = oButton.getText();
 ```
-- Button 객체는 UI 상의 버튼
-- setText() → 버튼의 글자를 바꾸는 메서드
+- 소속 클래스: `sap.m.Text`, `sap.m.Button` 등
+- 현재 표시 중인 텍스트를 읽어옴
+</br>
+
+4) setText(text)
+```java
+oButton.setText("완료");
+```
+- 소속 클래스: `sap.m.Text`, `sap.m.Button` 등
+- 버튼이나 텍스트 컨트롤의 글자를 변경함
+</br>
+
+5) getView()
+```java
+let oView = this.getView();
+```
+- 소속 클래스: `sap.ui.core.mvc.Controller`
+- Controller와 연결된 View(XML View)를 반환
+</br>
+
+6) byId(id)
+```java
+let oInput = this.getView().byId("idInput1");
+```
+- 소속 클래스: `sap.ui.core.mvc.View`
+- View 내부에서 해당 id를 가진 Control을 찾음
 </br>
 
 ### 1. Controller 코드
