--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
@@ -108,7 +108,7 @@ let oInput = this.getView().byId("idInput1");
 - View 내부에서 해당 id를 가진 Control을 찾음
 </br>
 
-### 실습1
+### < 실습 1 >
 
 ### 1. Controller 코드
 - View1.controller.js 파일
@@ -170,6 +170,63 @@ sap.ui.define([
                 <Button id="idButton" text="OK" press="onClick" />
                 <Text id="idText" text="안녕하세요" />
             </l:VerticalLayout>
+        </content>
+    </Page>
+</mvc:View>
+```
+</br>
+
+### < 실습 2 >
+
+### 1. Controller 코드
+- Practice.controller.js 파일
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller"
+], (Controller) => {
+    "use strict";
+
+    return Controller.extend("ycl2project02.controller.Practice", {
+        onInit() {
+        },
+        onClick: function() {
+            let checkbox1 = this.getView().byId("idCheckBox1");
+            let checkbox2 = this.getView().byId("idCheckBox2");
+            let textbox1 = checkbox1.getText();
+            let textbox2 = checkbox2.getText();
+            let selectbox1 = checkbox1.getSelected();
+            let selectbox2 = checkbox2.getSelected();
+            let oText = this.getView().byId("idText");
+
+            if(selectbox1 && selectbox2) {
+                oText.setText(textbox1+textbox2);
+            }
+            else if(selectbox1) {
+                oText.setText(textbox1);
+            }
+            else if(selectbox2) {
+                oText.setText(textbox2);
+            }
+        }
+    });
+});
+```
+</br>
+
+### 2. View 코드
+- Practice.view.xml 파일
+```java
+<mvc:View controllerName="ycl2project02.controller.Practice"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns="sap.m">
+    <Page id="page" title="{i18n>title}">
+        <content>
+            <VBox id="vbox">
+                <CheckBox id="idCheckBox1" text="option 1" selected="true"/>
+                <CheckBox id="idCheckBox2" text="option 2" selected="false"/>
+                <Button id="idButton" text="Button" press="onClick"/>
+                <Text id="idText" text="안녕하세요!"/>
+            </VBox>
         </content>
     </Page>
 </mvc:View>
