Update 웹 UI 프레임워크 활용한 개발 1-1(10.23).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.23).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.23).md
@@ -4,7 +4,7 @@
 - Fiori Launchpad : SAP의 통합 대시보드 환경. 여러 개의 SAP UI5 앱을 한 화면에서 실행 가능.
 - UI5 : SAP가 권장하는 최적의 UI Application을 만들 수 있는 Javascript 프레임워크 (내부 구조는 JS + XML + JSON)
 
-* 참고 사이트 : UI5 SDK 사이트(UI5 API 사이트), SAP BTP Trial 사이트
+* 참고 사이트 : UI5 SDK 사이트(UI5 API 사이트: ui5.sap.com), SAP BTP Trial 사이트
 * https://<host>:<port>/sap/public/bc/ui5_ui5/index.html
 </br>
 
