Update 웹 UI 프레임워크 활용한 개발 1-1(10.24).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
@@ -107,6 +107,34 @@ let oInput = this.getView().byId("idInput1");
 - 소속 클래스: `sap.ui.core.mvc.View`
 - View 내부에서 해당 id를 가진 Control을 찾음
 </br>
+</br>
+
+### Button 객체
+- 속성(property): text, icon, type, …
+- 이벤트(event): press → Controller(JS)에서 구현
+```html
+<Button text="저장" press="onSave"/>
+```
+</br>
+
+### Controller 구조(JS)
+- onInit 함수는 무조건 사용됨
+```java
+sap.ui.define([
+	"sap/ui/core/mvc/Controller",
+	"sap/m/Button"
+  ], function(Controller, Button) {
+	      return Controller.extend("resourceRootPath.controller.Main", {
+		
+      		onInit: function() { ... },            // ① 초기 실행
+      		onBeforeRendering: function() { ... }, // ② 렌더링 전
+      		onAfterRendering: function() { ... },  // ③ 렌더링 후
+      		onClick: function() { ... },           // ④ 버튼 등 이벤트
+      		onExit: function() { ... }             // ⑤ 화면 종료 시
+	      });
+});
+```
+</br>
 
 ### < 실습 1 >
 
@@ -156,7 +184,7 @@ sap.ui.define([
 
 ### 2. View 코드
 - View1.view.xml 파일
-```java
+```html
 <mvc:View controllerName="ycl2project01.controller.View1"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns:l="sap.ui.layout"
@@ -215,7 +243,7 @@ sap.ui.define([
 
 ### 2. View 코드
 - Practice.view.xml 파일
-```java
+```html
 <mvc:View controllerName="ycl2project02.controller.Practice"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns="sap.m">
