Update 웹 UI 프레임워크 활용한 개발 1-1(10.24).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
@@ -137,7 +137,8 @@ sap.ui.define([
 </br>
 
 ### Aggregation(집합관계)
-- 상위 컨트롤이 하위 컨트롤을 포함하는 구조 : `App → Page → Button`
+- 상위 컨트롤이 하위 컨트롤을 포함하는 구조 : `App → Page → Button`4
+  
 `content(default) 0..1`
 - content 생략 가능하지만, 한 개만 포함 가능
 `content(default) 0..n`
