--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
@@ -42,16 +42,30 @@ git log
 </br>
 
 ### Aggregation
-- UI5에서 부모 컨트롤이 자식 컨트롤을 포함하는 관계
+- 상위 컨트롤이 하위 컨트롤을 포함하는 구조 : `App → Page → Button`
+  
+```
+content(default) 0..1
+```
+- content 생략 가능하지만, 한 개만 포함 가능
+  
+```
+content(default) 0..n
+```
+- 여러 페이지(Page) 가능
+- <pages> 생략해도 됨 (default aggregation이기 때문)
 ```html
 <App>
-  <pages>          <!-- Aggregation 이름 → 소문자 시작 -->
-    <Pages>
-      ...
-    </Pages>
-  </pages>
+	<pages>        <!-- Aggregation 이름 → 소문자 시작 -->
+		<content>   
+			<Page>
+				<Button />
+			</Page>
+		</content>
+	</pages>
 </App>
 ```
+
 </br>
 
 ### Method
