--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
@@ -150,29 +150,21 @@ sap.ui.define([
 ```
 </br>
 
-### Aggregation(집합관계)
-- 상위 컨트롤이 하위 컨트롤을 포함하는 구조 : `App → Page → Button`4
-  
-```
-content(default) 0..1
-```
-- content 생략 가능하지만, 한 개만 포함 가능
-  
-```
-content(default) 0..n
-```
-- 여러 페이지(Page) 가능
-- <pages> 생략해도 됨 (default aggregation이기 때문)
+### VerticalLayout
+- 역할: 컨트롤들을 위에서 아래로 단순 세로 배치
+- 특징: 고정형, 반응형 지원 안 함
 ```html
-<App>
-	<pages>        <!-- Aggregation 이름 -->
-		<content>   <!-- Aggregation 이름 -->
-			<Page>
-				<Button />
-			</Page>
-		</content>
-	</pages>
-</App>
+<l:VerticalLayout>
+</ l:VerticalLayout>
+```
+</br>
+
+### VBox
+- 역할: 컨트롤들을 위에서 아래로 세로 배치
+- 특징: Flexbox 기반, 반응형 지원, 정렬 제어 가능
+```html
+<VBox>
+</VBox>
 ```
 </br>
 
