Update 웹 UI 프레임워크 활용한 개발 1-1(10.24).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.24).md
@@ -280,14 +280,12 @@ sap.ui.define([
     xmlns:mvc="sap.ui.core.mvc"
     xmlns="sap.m">
     <Page id="page" title="{i18n>title}">
-        <content>
-            <VBox id="vbox">
-                <CheckBox id="idCheckBox1" text="option 1" selected="true"/>
-                <CheckBox id="idCheckBox2" text="option 2" selected="false"/>
-                <Button id="idButton" text="Button" press="onClick"/>
-                <Text id="idText" text="안녕하세요!"/>
-            </VBox>
-        </content>
+        <VBox>
+			<CheckBox id="idCheckBox1" text="option 1" selected="true"/>
+			<CheckBox id="idCheckBox2" text="option 2" selected="false"/>
+			<Button id="idButton" text="Button" press="onClick"/>
+			<Text id="idText" text="안녕하세요!"/>
+		</VBox>
     </Page>
 </mvc:View>
 ```
