Update 웹 UI 프레임워크 활용한 개발 1-1(10.27).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
@@ -1,2 +1,22 @@
 # 10/27 기록
+### ToolbarSpacer
+- 툴바에서 버튼이나 아이콘을 가운데 또는 오른쪽으로 띄울 때 사용
+```html
+<Toolbar>
+    <Button text="왼쪽"/>
+    <ToolbarSpacer/>   <!-- 이 공간 때문에 다음 버튼이 오른쪽으로 밀림 -->
+    <Button text="오른쪽"/>
+</Toolbar>
+```
+</br>
+
+### Page
+- 앱의 하나의 화면 단위를 정의하는 컨테이너
+- 상단에 홈 화면이라는 제목 표시, 뒤로가기 버튼 표시, 버튼 클릭 시 onNavBack 함수 실행
+```html
+<Page title="홈 화면" showNavButton="true" navButtonPress="onNavBack">
+    <Text text="메인 컨텐츠"/>
+</Page>
+```
+
 ### < 실습 1 >
