Update 웹 UI 프레임워크 활용한 개발 1-1(10.27).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
@@ -18,5 +18,46 @@
     <Text text="메인 컨텐츠"/>
 </Page>
 ```
+</br>
 
-### < 실습 1 >
+- border: 테두리
+- padding: 내용물과 테두리 사이의 내부 여백
+- margin: 다른 요소와의 외부 간격
+</br>
+
+### < 예제 1 >
+```html
+<mvc:View controllerName="ycl2project03.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:l="sap.ui.layout"
+    xmlns="sap.m">
+    <Page id="page" title="{i18n>title}">
+        <!-- <l:VerticalLayout class="sapUiContentPadding">     <!-- class: css 문법 -->    
+
+            <Input value="input Value"/>
+            <Text text="text" />
+            <StepInput />
+            <ComboBox ></ComboBox>      <!-- key in 가능(입력+선택 가능) -->
+            <Select />                  <!-- 선택만 가능 -->
+            <DatePicker displayFormat="yyyy-MM-dd" />
+            <DateRangeSelection />
+            <Label text="label" />
+
+        </l:VerticalLayout> -->
+
+        <!-- sap.m.VBox 또는 sap.m.HBox로 대체 사용 가능 -->
+        
+        <!-- <l:HorizontalLayout >
+            <Input value="input Value"/>
+            <Text text="text" />
+            <StepInput />
+            <ComboBox ></ComboBox>      
+            <Select />                  
+            <DatePicker displayFormat="yyyy-MM-dd" />
+            <DateRangeSelection />
+            <Label text="label" />
+        </l:HorizontalLayout> -->
+
+    </Page>
+</mvc:View>
+```
