Update 웹 UI 프레임워크 활용한 개발 1-1(10.27).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
@@ -26,6 +26,9 @@
 </br>
 
 ### < 예제 1 >
+- class: CSS 문법에서 스타일을 적용할 때 요소에 이름을 붙이는 속성
+- `<ComboBox>` : 사용자가 입력하거나 목록에서 선택할 수 있는 드롭다운
+- `<Select>` : 목록에서 항목만 선택할 수 있는 드롭다운
 ```html
 <mvc:View controllerName="ycl2project03.controller.Main"
     xmlns:mvc="sap.ui.core.mvc"
