Update 웹 UI 프레임워크 활용한 개발 1-1(10.27).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
@@ -35,12 +35,12 @@
     xmlns:l="sap.ui.layout"
     xmlns="sap.m">
     <Page id="page" title="{i18n>title}">
-        <!-- <l:VerticalLayout class="sapUiContentPadding">     <!-- class: css 문법 -->    
+        <!-- <l:VerticalLayout class="sapUiContentPadding">   
             <Input value="input Value"/>
             <Text text="text" />
             <StepInput />
-            <ComboBox ></ComboBox>      <!-- key in 가능(입력+선택 가능) -->
-            <Select />                  <!-- 선택만 가능 -->
+            <ComboBox ></ComboBox>     
+            <Select />                  
             <DatePicker displayFormat="yyyy-MM-dd" />
             <DateRangeSelection />
             <Label text="label" />
