Update 웹 UI 프레임워크 활용한 개발 1-1(10.27).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
@@ -67,7 +67,6 @@
 ### MessageToast
 - 화면 하단에 잠깐 나타나는 간단 알림용 메시지
 - 숫자도 자동으로 문자열로 변환되어 표시 → 별도 변환 불필요
-- 모듈 import
 ```java
 sap.ui.define([
     "sap/ui/core/mvc/Controller",
@@ -82,7 +81,6 @@ MessageToast.show("메시지 내용");
 ### MessageBox
 - 팝업 형태로 표시되며 사용자 확인이 필요한 중요한 메시지
 - 숫자나 객체는 문자열로 변환해서 전달해야 안전하게 표시 가능
-- 모듈 import
 ```java
 sap.ui.define([
     "sap/ui/core/mvc/Controller",
@@ -92,3 +90,8 @@ sap.ui.define([
 ```
 MessageBox.show("메시지 내용");
 ```
+</br>
+
+### < 실습 1 >
+
+### Controller
