Update 웹 UI 프레임워크 활용한 개발 1-1(10.27).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
@@ -94,4 +94,79 @@ MessageBox.show("메시지 내용");
 
 ### < 실습 1 >
 
-### Controller
+### 1. Controller 코드
+- Main.controller.js 파일일
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/m/MessageBox",
+    "sap/m/MessageToast"
+], (Controller, MessageBox, MessageToast) => {
+    "use strict";
+
+    return Controller.extend("ycl2project04.controller.Main", {
+        onInit() {
+        },
+        onCalc: function() {
+            // this.getView() 에서 .getView() 생략 가능! (버전업)
+            //let oSelect = this.byId("idSelect");  oSelect = {bAllowTextSelection: true};
+            let Number1 = Number(this.byId("idNumber1").getValue());
+            let Number2 = Number(this.byId("idNumber2").getValue());
+
+            let oSelect = this.byId("idselect").getSelectedKey();
+
+            if(oSelect === "PLUS") {
+                MessageBox.show(String(Number1+Number2));
+                MessageToast.show(Number1+Number2);
+            }
+            else if(oSelect === "MINUS") {
+                MessageBox.show(String(Number1-Number2));
+                MessageToast.show(Number1-Number2);
+            }
+            else if(oSelect == "MULTIPL") {
+                MessageBox.show(String(Number1*Number2));
+                MessageToast.show(Number1*Number2);
+            }
+            else if(oSelect === "DIVIDE") {
+                MessageBox.show(String(Number1/Number2));
+                MessageToast.show(Number1/Number2);
+            }
+
+            //debugger;       
+            // break-point 라고 부름. 로직 실행중 debugger를 만나면
+            // 디버깅이 걸려서 해당 구간에서 멈춰서 진행사항을 확인할 수 있다 (=디버깅이 걸렸다고 표현)
+            // debugger를 동작시키기 위해선 개발자도구(F12)가 켜진 상태여야함
+
+        }
+    });
+});
+```
+</br>
+
+2. View 코드
+- Main.view.xml 파일
+```java
+<mvc:View controllerName="ycl2project04.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:core="sap.ui.core"
+    xmlns="sap.m">
+    <Page id="page" title="{i18n>title}">
+        <FlexBox justifyContent="Center" alignItems="Center">
+            <VBox width="30%" class="sapUiSmallMargin">
+                <Input id="idNumber1" width="100%" />
+                <Select id="idselect" width="100%" showSecondaryValues="true">
+                    <items>
+                        <core:ListItem key="PLUS" text="+" additionalText="PLUS"/>
+                        <core:ListItem key="MINUS" text="-" additionalText="MINUS"/>
+                        <core:ListItem key="MULTIPL" text="*" additionalText="MULTIPL"/>
+                        <core:ListItem key="DIVIDE" text="/" additionalText="DIVIDE"/>
+                    </items>
+                </Select>
+                <Input id="idNumber2" width="100%" />
+                <Button text="계산하기" press="onCalc"
+                        width="100%" type="Emphasized" />
+            </VBox>
+        </FlexBox>
+    </Page>
+</mvc:View>
+```
