Update 웹 UI 프레임워크 활용한 개발 1-1(10.27).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
@@ -143,7 +143,7 @@ sap.ui.define([
 ```
 </br>
 
-2. View 코드
+### 2. View 코드
 - Main.view.xml 파일
 ```java
 <mvc:View controllerName="ycl2project04.controller.Main"
