--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
@@ -113,7 +113,7 @@ sap.ui.define([
             let Number1 = Number(this.byId("idNumber1").getValue());
             let Number2 = Number(this.byId("idNumber2").getValue());
 
-            let oSelect = this.byId("idselect").getSelectedKey();
+            let oSelect = this.byId("idselect").getSelectedItem().getKey();
 
             if(oSelect === "PLUS") {
                 MessageBox.show(String(Number1+Number2));
