Update 웹 UI 프레임워크 활용한 개발 1-1(10.27).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
@@ -170,3 +170,22 @@ sap.ui.define([
     </Page>
 </mvc:View>
 ```
+</br>
+
+### Fragment (조각 View)
+- View 일부를 별도 파일로 분리해서 관리
+- 장점: 재사용 가능, 유지보수 용이
+```
+<파일명1>.fragment.xml
+<파일명2>.fragment.xml
+<파일명3>.fragment.xml
+```
+- Fragment 로드 함수:
+```java
+this.loadFragment({ name: "sap.training.exc.view.Dialog" });
+// 또는
+sap.ui.core.Fragment.load({ name: "sap.training.exc.view.Dialog" });
+```
+</br>
+
+### Dialog
