Update 웹 UI 프레임워크 활용한 개발 1-1(10.27).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
@@ -189,3 +189,22 @@ sap.ui.core.Fragment.load({ name: "sap.training.exc.view.Dialog" });
 </br>
 
 ### Dialog
+- 사용자 입력이나 정보를 받는 팝업 창
+- Fragment로 구현하면 재사용 가능
+- Controller에서 this.pDialog에 저장 → 한 번만 생성, 계속 재사용 가능
+```java
+anyControllerMethod: function() {
+    if(!this.pDialog) {
+        this.pDialog = this.loadFragment({
+            name: "sap.training.exc.view.Dialog"
+        });
+    }
+    this.pDialog.open(); // 팝업 열기
+}
+```
+</br>
+
+### Fragment 파일 위치
+1. webapp/fragment 폴더
+2. webapp/view/fragment 폴더 (권장 ✅)
+3. webapp/view 안에 직접 생성
