Update 웹 UI 프레임워크 활용한 개발 1-1(10.27).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
@@ -95,7 +95,7 @@ MessageBox.show("메시지 내용");
 ### < 실습 1 >
 
 ### 1. Controller 코드
-- Main.controller.js 파일일
+- Main.controller.js 파일
 ```java
 sap.ui.define([
     "sap/ui/core/mvc/Controller",
