Update 웹 UI 프레임워크 활용한 개발 1-1(10.27).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
@@ -192,6 +192,7 @@ sap.ui.core.Fragment.load({ name: "sap.training.exc.view.Dialog" });
 - 사용자 입력이나 정보를 받는 팝업 창
 - Fragment로 구현하면 재사용 가능
 - Controller에서 this.pDialog에 저장 → 한 번만 생성, 계속 재사용 가능
+- Dialog는 비동기 로딩되므로 로딩 완료 후에 open()을 호출하려면 반드시 then() 안에서 열어야 함
 ```java
 anyControllerMethod: function() {
     if(!this.pDialog) {
