Update 웹 UI 프레임워크 활용한 개발 1-1(10.27).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
@@ -195,7 +195,7 @@ sap.ui.core.Fragment.load({ name: "sap.training.exc.view.Dialog" });
 - Dialog는 비동기 로딩되므로 로딩 완료 후에 open()을 호출하려면 반드시 then() 안에서 열어야 함
 ```java
 anyControllerMethod: function() {
-    if(!this.pDialog) {
+    if(!this.pDialog) {                        // dialog는 한 번만 로드(재사용)
         this.pDialog = this.loadFragment({
             name: "sap.training.exc.view.Dialog"
         });
