Update 웹 UI 프레임워크 활용한 개발 1-1(10.27).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
@@ -209,3 +209,48 @@ anyControllerMethod: function() {
 1. webapp/fragment 폴더
 2. webapp/view/fragment 폴더 (권장 ✅)
 3. webapp/view 안에 직접 생성
+</br>
+
+### < 예제 2 >
+- .then()은 Promise(프로미스) 라는 객체에서 작업이 끝난 다음에 실행할 코드
+```
+[버튼 클릭]
+   ↓
+onClick() 실행
+   ↓
+Dialog 있으면 open()
+   ↓
+Dialog 없으면 Fragment.load()
+   ↓
+Fragment.load()가 XML 파일을 불러옴 (비동기)
+   ↓
+다 불러온 다음 .then() 실행 → oDialog.open()
+```
+- .then()이 필요한 이유 : XML 파일 가져오고 Dialog를 실행해야 하므로
+```java
+// Fragment.load()가 끝나야 Dialog를 사용할 수 있음
+Fragment.load({...})
+    .then(function(oDialog) {
+        oDialog.open();  // 로드 완료 후 Dialog 열기
+    });
+```
+- 이미 만들어진 Dialog가 있는지 Core(전역 공간)에서 찾아봄
+- Fragment는 View랑 분리되어 있어서 Core로 접근해야 함
+```java
+let oDialog = sap.ui.getCore().byId("idDialog");
+```
+- 없으면 Fragment.load() 로 Dialog를 불러오고
+- .then() 안에서 oDialog.open() 실행 (로드 끝난 뒤에만 가능)
+```java
+if (oDialog) {
+    oDialog.open();   // 이미 있으면 바로 열기
+} else {
+    Fragment.load({
+        name: "ycl2project05.view.fragment.Dialog",
+        type: "XML",
+        controller: this
+    }).then(function(oDialog) {
+        oDialog.open();   // 로드 끝난 후 열기
+    });
+}
+```
