Update 웹 UI 프레임워크 활용한 개발 1-1(10.27).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.27).md
@@ -1,4 +1,51 @@
 # 10/27 기록
+### Grid
+- 여러 UI 요소를 격자(그리드) 형태로 반응형 배치하는 레이아웃 컨트롤
+```java
+new sap.ui.layout.Grid({
+  defaultSpan: "L6 M6 S12",
+  content: [
+    new sap.m.Label({ text: "이름" }),
+    new sap.m.Input({ placeholder: "이름을 입력하세요" }),
+    new sap.m.Label({ text: "이메일" }),
+    new sap.m.Input({ placeholder: "example@email.com" })
+  ]
+});
+```
+</br>
+
+### Label - Input
+- Label은 필드 이름을 표시하고, Input은 사용자의 텍스트 입력을 받는 컨트롤
+```java
+new sap.m.Label({
+  text: "사용자 ID",
+  labelFor: "userInput"
+});
+
+new sap.m.Input({
+  id: "userInput",
+  placeholder: "ID를 입력하세요"
+});
+```
+</br>
+
+### Panel
+- 관련된 콘텐츠를 하나의 접이식 영역으로 묶는 컨테이너
+```java
+new sap.m.Panel({
+  headerText: "사용자 정보",
+  expandable: true,
+  expanded: true,
+  content: [
+    new sap.m.Label({ text: "이름" }),
+    new sap.m.Input({ placeholder: "이름 입력" }),
+    new sap.m.Label({ text: "직급" }),
+    new sap.m.Input({ placeholder: "직급 입력" })
+  ]
+});
+```
+</br>
+
 ### ToolbarSpacer
 - 툴바에서 버튼이나 아이콘을 가운데 또는 오른쪽으로 띄울 때 사용
 ```html
