Update 웹 UI 프레임워크 활용한 개발 1-1(10.28).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.28).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.28).md
@@ -1,8 +1,8 @@
 # 10/28 기록
 ### SAP Fiori UI 밀도 설정: Compact와 Cozy
-### Compact (PC용)
+1) Compact (PC용)
 - 클래스: sapUiSizeCompact
 - 특징: 요소가 작고 촘촘하게 표시 → 한눈에 많은 정보 확인 가능
-### Cozy (모바일용)
+2) Cozy (모바일용)
 - 클래스: sapUiSizeCozy
 - 특징: 요소가 크고 여유 있게 표시 → 터치 시 오타 방지, 사용 편리
