Update 웹 UI 프레임워크 활용한 개발 1-1(10.28).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.28).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1(10.28).md
@@ -6,3 +6,10 @@
 2) Cozy (모바일용)
 - 클래스: sapUiSizeCozy
 - 특징: 요소가 크고 여유 있게 표시 → 터치 시 오타 방지, 사용 편리
+</br>
+
+### SAPUI5 컨트롤러 라이프사이클 메서드
+- `onInit` : 컨트롤러가 처음 생성될 때 실행, 모델 설정이나 초기 데이터 로딩에 사용
+- `onBeforerendering` : 뷰가 렌더링되기 직전에 실행, UI를 동적으로 수정할 때 사용
+- `onAfterRendering` : 뷰가 렌더링된 후 실행, DOM 접근이나 jQuery 작업에 사용
+- `onExit` : 컨트롤러가 종료될 때 실행, 리소스 해제나 이벤트 해제에 사용
