Update 웹 UI 프레임워크 활용한 개발 1-2(10.28).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
@@ -3,7 +3,7 @@
 - Model: 데이터를 관리해주는 역할
 - 클라이언트(Client) 모델
   - 종류: JSON, XML, Resource
-  - 특징: 프로젝트 내부에서만 사용, 서버 요청 필요 없음
+  - 특징: 프로젝트 내부에서만 사용, 서버 요청 없음 → 바로 화면에 사용 가능
 - 서버(Server) 모델
   - 종류: OData V2, OData V4
-  - 특징: 서버와 통신, 데이터가 필요하면 서버에 요청
+  - 특징: 서버와 통신, 서버에 요청 필요 → 서버 응답 받아 화면에 사용
