Update 웹 UI 프레임워크 활용한 개발 1-2(10.28).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
@@ -7,3 +7,53 @@
 - 서버(Server) 모델
   - 종류: OData V2, OData V4
   - 특징: 서버와 통신, 서버에 요청 필요 → 서버 응답 받아 화면에 사용
+</br>
+
+### SAPUI5 JSONModel 사용 정리
+- 모듈 정의 및 불러오기
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel"
+], function(Controller, JSONModel) {
+    "use strict";
+});
+```
+
+- 컨트롤러에서 생성한 모델
+- 다른 View에서는 접근 불가 → 컨트롤러/해당 View 내부에서만 사용 가능 (local(지역) 모델)
+```java
+onInit: function() {
+    // 1. JSONModel 생성
+    var oModel = new sap.ui.model.json.JSONModel({
+        name: "홍길동",
+        age: 30
+    });
+
+    // 2. 현재 View에 모델 연결 (컨트롤러 전용)
+    this.getView().setModel(oModel, "customer");
+}
+```
+
+- manifest.json에서 정의한 모델
+- manifest.json에서 정의 → 앱 전체에서 전역 모델(Global Model)
+- 기본 모델(""): 이름 없이 접근 가능, this.getView().getModel()
+- 이름 있는 모델: "customer" 같은 이름으로 접근, this.getView().getModel("customer")
+```java
+{
+  "sap.ui5": {
+    "models": {
+      "": { // 기본 모델
+        "type": "sap.ui.model.json.JSONModel",
+        "settings": {
+          "data": { "name": "홍길동", "age": 30 }
+        }
+      },
+      "customer": { // 이름 있는 전역 모델
+        "type": "sap.ui.model.json.JSONModel",
+        "settings": {}
+      }
+    }
+  }
+}
+```
