Update 웹 UI 프레임워크 활용한 개발 1-2(10.28).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
@@ -23,6 +23,8 @@ sap.ui.define([
 
 - 컨트롤러에서 생성한 모델
 - 다른 View에서는 접근 불가 → 컨트롤러/해당 View 내부에서만 사용 가능 (local(지역) 모델)
+- `setModel(oModel, "customer")` → View에서 "customer"라는 이름으로 접근
+- `setModel(oModel)` → 기본 모델, 이름 없이 접근 가능
 ```java
 onInit: function() {
     // 1. JSONModel 생성
@@ -39,8 +41,8 @@ onInit: function() {
 
 - manifest.json에서 정의한 모델
 - manifest.json에서 정의 → 앱 전체에서 전역 모델(Global Model)
-- 기본 모델(""): 이름 없이 접근 가능, this.getView().getModel()
-- 이름 있는 모델: "customer" 같은 이름으로 접근, this.getView().getModel("customer")
+- `this.getView().getModel()` → 기본 모델(""). 이름 없이 접근 가능. 
+- `this.getView().getModel("customer")` →  이름 있는 모델. "customer" 같은 이름으로 접근.
 ```java
 {
   "sap.ui5": {
