Update 웹 UI 프레임워크 활용한 개발 1-2(10.28).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
@@ -10,6 +10,22 @@
 </br>
 
 ### SAPUI5 JSONModel 사용 정리
+- `getModel`
+  - View 또는 컨트롤러에서 등록된 모델을 가져오는 함수
+  - 가져온 모델 객체를 통해 데이터 조회/수정 가능
+```java
+var oModel = View.getModel(sName)
+```
+</br>
+
+- `setModel`
+  - 모델을 View 또는 컨트롤러에 연결하는 역할
+  - 연결된 모델은 화면(UI) 요소와 바인딩 가능
+```java
+View.setModel(oModel, sName)
+```
+</br>
+
 - 모듈 정의 및 불러오기
 ```java
 sap.ui.define([
@@ -61,3 +77,19 @@ onInit: function() {
   }
 }
 ```
+</br>
+
+### 바인딩(Binding)
+- 모델(Model)과 화면(View)을 연결하여 데이터를 자동으로 표시하고 동기화하는 기능
+</br>
+### 모델 종류
+- JSON Model: 클라이언트 데이터(JSON) 관리, 기본 two-way
+- XML Model: 클라이언트 XML 데이터 관리, 기본 two-way
+- Resource Model: 다국어(i18n) 문자열 관리, 기본 one-way
+- OData V2 Model: 서버 데이터 통신, 기본 one-way
+- OData V4 Model: 최신 서버 데이터 통신, 기본 one-way
+
+### 바인딩 방식(mode)
+- one-time : 모델 → 뷰, 일회성 바인딩(최초 1회만 화면에 표시)
+- one-way : 모델 → 뷰, 단방향 바인딩(모델 데이터 변경 시 화면 자동 갱신)
+- two-way : 모델 ↔ 뷰, 양방향 바인딩(모델과 화면 모두 동기화, 뷰 변경 시 모델에도 반영)
