Update 웹 UI 프레임워크 활용한 개발 1-2(10.28).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
@@ -95,4 +95,35 @@ onInit: function() {
 - Resource Model: 다국어(i18n) 문자열 관리, 기본 one-way
 - OData V2 Model: 서버 데이터 통신, 기본 one-way
 - OData V4 Model: 최신 서버 데이터 통신, 기본 one-way
+</br>
 
+### SAPUI5 JSON Model 바인딩 접근
+- 컨트롤러에서 생성한 모델 (Local Model)
+```java
+onInit() {
+    // 배열 데이터
+    let oDataArray = { 
+        name: [{
+            firstName: "Kim",
+            lastName: "Yewon"
+        }] 
+    };
+
+    // 객체 데이터
+    let oDataObject = { 
+        firstName: "Kim",
+        lastName: "Yewon"
+    };
+
+    // JSONModel 생성
+    let oModelArray = new JSONModel(oDataArray);
+    let oModelObject = new JSONModel(oDataObject);
+
+    // View에 모델 연결
+    this.getView().setModel(oModelArray, "arrayModel");
+    this.getView().setModel(oModelObject, "objectModel");
+}
+```
+</br>
+
+- XML View에서 바인딩 접근
