Update 웹 UI 프레임워크 활용한 개발 1-2(10.28).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
@@ -127,3 +127,9 @@ onInit() {
 </br>
 
 - XML View에서 바인딩 접근
+- 배열 데이터 접근
+```html
+<Page title="{arrayModel>/name/0/firstName}">
+    <!-- arrayModel의 name 배열 첫 번째 객체의 firstName -->
+</Page>
+```
