Update 웹 UI 프레임워크 활용한 개발 1-2(10.28).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
@@ -129,7 +129,19 @@ onInit() {
 - XML View에서 바인딩 접근
 - 배열 데이터 접근
 ```html
-<Page title="{arrayModel>/name/0/firstName}">
-    <!-- arrayModel의 name 배열 첫 번째 객체의 firstName -->
+<Page id="page" title="{arrayModel>/name/0/firstName}">
+    <!-- arrayModel의 name 배열 첫 번째 객체(인덱스 0번)의 firstName -->
+</Page>
+```
+- 객체 데이터 접근
+```html
+<Page id="page" title="{objectModel>/firstName}">
+    <!-- objectModel의 firstName -->
+</Page>
+```
+- 다중 속성 바인딩
+```html
+<Page id="page" title="{local>/name/firstName} {local>/name/lastName}">
+    <!-- local 모델의 name 객체 속성 firstName과 lastName 바인딩 -->
 </Page>
 ```
