Update 웹 UI 프레임워크 활용한 개발 1-2(10.28).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
@@ -101,27 +101,28 @@ onInit: function() {
 - 컨트롤러에서 생성한 모델 (Local Model)
 ```java
 onInit() {
-    // 배열 데이터
-    let oDataArray = { 
-        name: [{
-            firstName: "Kim",
-            lastName: "Yewon"
-        }] 
+    // 객체 데이터
+    let oData = { 
+        inputValue: {
+            firstName: "Park",
+            lastName: "Gildong"
+        }
     };
 
-    // 객체 데이터
-    let oDataObject = { 
-        firstName: "Kim",
-        lastName: "Yewon"
+    let aData = { 
+        inputValue: [{
+            firstName: "Park",
+            lastName: "Gildong"
+        }]
     };
 
     // JSONModel 생성
-    let oModelArray = new JSONModel(oDataArray);
-    let oModelObject = new JSONModel(oDataObject);
+    let oModel = new JSONModel(oData);
+    let aModel = new JSONModel(aData);
 
     // View에 모델 연결
-    this.getView().setModel(oModelArray, "arrayModel");
-    this.getView().setModel(oModelObject, "objectModel");
+    this.getView().setModel(oModel, "local");
+    this.getView().setModel(oModel, "array");
 }
 ```
 </br>
@@ -130,19 +131,19 @@ onInit() {
 - XML View에서 바인딩 접근
 - 배열 데이터 접근
 ```html
-<Page id="page" title="{arrayModel>/name/0/firstName}">
-    <!-- arrayModel의 name 배열 첫 번째 객체(인덱스 0번)의 firstName -->
+<Page id="page" title="{array>/inputValue/0/firstName}">
+    <!-- array의 name 배열 첫 번째 객체(인덱스 0번)의 firstName -->
 </Page>
 ```
 - 객체 데이터 접근
 ```html
-<Page id="page" title="{objectModel>/firstName}">
-    <!-- objectModel의 firstName -->
+<Page id="page" title="{local>/inputValue/firstName}">
+    <!-- local의 firstName -->
 </Page>
 ```
 - 다중 속성 바인딩
 ```html
-<Page id="page" title="{local>/name/firstName} {local>/name/lastName}">
+<Page id="page" title="{local>/inputValue/firstName} {local>/inputValue/lastName}">
     <!-- local 모델의 name 객체 속성 firstName과 lastName 바인딩 -->
 </Page>
 ```
