Update 웹 UI 프레임워크 활용한 개발 1-2(10.28).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
@@ -120,10 +120,12 @@ onInit() {
     // JSONModel 생성
     let oModel = new JSONModel(oData);
     let aModel = new JSONModel(aData);
+    let nModel = new JSONModel(oData);
 
     // View에 모델 연결
     this.getView().setModel(oModel, "local");
-    this.getView().setModel(oModel, "array");
+    this.getView().setModel(aModel, "array");
+    this.getView().setModel(nModel);
 }
 ```
 </br>
@@ -140,6 +142,12 @@ onInit() {
 ```html
 <Page id="page" title="{local>/inputValue/firstName}">
     <!-- local의 firstName -->
+</Page>
+```
+- 단일 속성 바인딩
+```html
+<Page id="page" title="{/inputValue/firstName}">
+    <!-- 기본 모델의 inputValue.firstName -->
 </Page>
 ```
 - 다중 속성 바인딩
