Update 웹 UI 프레임워크 활용한 개발 1-2(10.28).md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-2(10.28).md
@@ -156,3 +156,16 @@ onInit() {
     <!-- local 모델의 name 객체 속성 firstName과 lastName 바인딩 -->
 </Page>
 ```
+</br>
+
+### Property Binding
+- 단일 데이터 값을 UI 컨트롤에 연결하는 방식
+- 예시: `{과일들: [{이름: 사과, 가격: 5000}]}`
+- 접근: `/과일들/0/이름` → "사과", `/과일들/0/가격` → 5000
+- 특징: 단순, 하나의 컨트롤에 하나의 데이터 필드 연결
+
+### Aggregation Binding (List / Table Binding)
+- 컬렉션(배열)을 UI 컨트롤(리스트, 테이블 등)에 연결
+- 접근: `/과일들` → 전체 배열 바인딩
+- 각 아이템 접근: `/과일들/0/이름`, `/과일들/0/가격`
+- 특징: 반복 UI 요소 자동 생성 가능 (ex. 테이블 row)
